force-app/main/default/objects/Beer__c/fields/Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Alcohol__c</fullName>
    <label>Alcohol %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>