force-app/main/default/objects/Beer__c/fields/brewery_Name__c.field-meta.xml
<CustomField>
    <fullName>brewery_Name__c</fullName>
    <label>brewery_Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>