force-app/main/default/objects/Beer__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <required>true</required>
    <type>Url</type>
</CustomField>