force-app/main/default/objects/Beer__c/listViews/Beer.listView-meta.xml
<ListView>
    <fullName>Beer</fullName>
    <columns>NAME</columns>
    <columns>Alcohol__c</columns>
    <columns>Price__c</columns>
    <columns>brewery_Name__c</columns>
    <columns>Total_Quantity__c</columns>
    <filterScope>Mine</filterScope>
    <label>Beer</label>
</ListView>